# StarGuidance

./: .env.example  .gitignore  .prettierignore  .prettierrc.json  AGENTS.md  README.md  eslint.config.mjs  netlify.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.bootstrap/: part-00  part-01  part-02  part-03  part-04  part-05  part-06  part-07  part-08  part-09
.github/workflows/: ci.yml  materialize-source.yml
apps/profile-engine/: .dockerignore  Dockerfile  pyproject.toml
apps/profile-engine/src/profile_engine/: __init__.py  configuration.py  dreamspell.py  main.py  models.py  numerology.py  traits.py
apps/profile-engine/tests/: test_calculations.py  test_health.py  test_profile_api.py
apps/web/: next.config.ts  package.json  playwright.config.ts  playwright.preview.config.ts  tsconfig.json  vitest.config.ts
apps/web/public/art/sanctuary/: cosmic-gothic-desktop-v1.avif  cosmic-gothic-mobile-v1.avif
apps/web/src/app/: app-nav.tsx  globals.css  layout.tsx  page.tsx
apps/web/src/app/history/: page.tsx
apps/web/src/app/onboarding/: page.tsx  profile-form.tsx
apps/web/src/lib/: auth.ts  hosted-runtime.ts  local-store.ts  persistence.ts  profile-engine.ts  report.ts  request-security.ts  runtime.test.ts  runtime.ts  supabase.ts
apps/web/tests/e2e/: foundation.spec.ts  mvp.spec.ts  preview-visual.spec.ts  visual.spec.ts
docs/: ARCHITECTURE.md  ARTWORK-PROVENANCE.md  DEPLOYMENT.md  KNOWN-GAPS.md  LOCAL-DEVELOPMENT.md  PRD.md  PROFILE-CALCULATIONS.md  SECURITY.md  SUPABASE-STAGING.md  TAROT-INTEGRITY.md
(+39 files in other folders)
