[build-system]
requires = ["setuptools==82.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "starguidance-profile-engine"
version = "0.1.0"
description = "Deterministic, versioned profile calculations for StarGuidance"
requires-python = ">=3.10"
dependencies = [
  "fastapi==0.139.2",
  "pydantic==2.13.4",
  "uvicorn[standard]==0.51.0",
]

[project.optional-dependencies]
dev = [
  "httpx2==2.7.0",
  "mypy==2.3.0",
  "pytest==9.1.1",
  "ruff==0.14.2",
]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.10"
strict = true
packages = ["profile_engine"]
mypy_path = "src"

[tool.setuptools.packages.find]
where = ["src"]
